--- a/src/cv/index.html
+++ b/src/cv/index.html
@@ -77,7 +77,7 @@
                 </svg>
                 07764 740 524
             </div>
-            <a href="http://felixeve.co.uk">
+            <a href="https://felixeve.co.uk">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="1 -2 22 33">
                     <path d="M16 0a16 16 0 100 32 16 16 0 000-32zm0 30c-2 0-3.8-.4-5.5-1.1l7.2-8.2c.2-.2.3-.5.3-.7v-3c0-.6-.4-1-1-1-3.5 0-7.3-3.7-7.3-3.7A1 1 0 009 12H5a1 1 0 00-1 1v6c0 .4.2.7.6.9L8 21.6v5.9A14 14 0 013.3 10H7c.3 0 .5-.1.7-.3l4-4c.2-.2.3-.4.3-.7V2.6a14 14 0 0110.1.8l-.3.4a6 6 0 000 8.4 6 6 0 004.5 1.8 23.5 23.5 0 01-.3 11.8A14 14 0 0116 30z"/>
                 </svg>
