Move things around

--- a/src/cv.html
+++ b/src/cv.html
@@ -9,18 +9,18 @@
 <meta name="referrer" content="no-referrer">
 <meta name="Description" content="Portfolio and contact form for Felix Eve">
 
-<link rel="apple-touch-icon" sizes="180x180" href="../img/icons/icon_x180.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
-<link rel="mask-icon" href="../img/icons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="../img/icons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="img/icons/icon_x180.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+<link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="img/icons/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="src/img/icons/icon_x144.png">
+<meta name="msapplication-TileImage" content="img/icons/icon_x144.png">
 <meta name="theme-color" content="#192069">
 
-<link rel="manifest" href="../img/icons/manifest.json">
+<link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#0650a8">
-<link href="../css/cv.css" rel="stylesheet">
+<link href="css/cv.css" rel="stylesheet">
 <body>
 
 <header class="header" id="top">
@@ -56,10 +56,10 @@
         <p class="subtitle">I love crafting code, adhering to SOLID methodologies, and strictly adhering to coding standards.</p>
 
         <picture class="photo">
-            <source type="image/webp" srcset="../img/square_felix/felix-240.webp">
-            <source type="image/png" srcset="../img/square_felix/felix-240.png">
-            <source type="image/jpeg" srcset="../img/square_felix/felix-240.jpg">
-            <img class="felix" src="../img/square_felix/felix-240.jpg" alt="Felix Eve" width="120" height="120">
+            <source type="image/webp" srcset="img/square_felix/felix-240.webp">
+            <source type="image/png" srcset="img/square_felix/felix-240.png">
+            <source type="image/jpeg" srcset="img/square_felix/felix-240.jpg">
+            <img class="felix" src="img/square_felix/felix-240.jpg" alt="Felix Eve" width="120" height="120">
         </picture>
 
         <div class="contact">
