--- a/src/cv.html
+++ b/src/cv.html
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li>
-                <button onClick="window.print()" class="menu__link top__print">Print</button>
+                <a href="/files/Felix-Eve-CV-December-2021.pdf" class="menu__link top__print" download>PDF</a>
             </li>
         </ul>
 
@@ -52,7 +52,7 @@
 
     <header class="cv-header">
         <h1 class="main-title">Felix Eve</h1>
-        <h2>Full Stack Developer</h2>
+        <h2>Full Stack Software Engineer</h2>
         <p class="subtitle">I love crafting code, adhering to SOLID methodologies, and strictly adhering to coding standards.</p>
 
         <picture class="photo">
@@ -64,11 +64,13 @@
 
         <div class="contact">
             <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
-                    <title>Email</title>
-                    <path d="M28 11.094v12.406c0 1.375-1.125 2.5-2.5 2.5h-23c-1.375 0-2.5-1.125-2.5-2.5v-12.406c0.469 0.516 1 0.969 1.578 1.359 2.594 1.766 5.219 3.531 7.766 5.391 1.313 0.969 2.938 2.156 4.641 2.156h0.031c1.703 0 3.328-1.188 4.641-2.156 2.547-1.844 5.172-3.625 7.781-5.391 0.562-0.391 1.094-0.844 1.563-1.359zM28 6.5c0 1.75-1.297 3.328-2.672 4.281-2.438 1.687-4.891 3.375-7.313 5.078-1.016 0.703-2.734 2.141-4 2.141h-0.031c-1.266 0-2.984-1.437-4-2.141-2.422-1.703-4.875-3.391-7.297-5.078-1.109-0.75-2.688-2.516-2.688-3.938 0-1.531 0.828-2.844 2.5-2.844h23c1.359 0 2.5 1.125 2.5 2.5z"></path>
-                </svg>
-                dahousecat@gmail.com
+                <a href="mailto:felix@felixeve.co.uk">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
+                        <title>Email</title>
+                        <path d="M28 11.094v12.406c0 1.375-1.125 2.5-2.5 2.5h-23c-1.375 0-2.5-1.125-2.5-2.5v-12.406c0.469 0.516 1 0.969 1.578 1.359 2.594 1.766 5.219 3.531 7.766 5.391 1.313 0.969 2.938 2.156 4.641 2.156h0.031c1.703 0 3.328-1.188 4.641-2.156 2.547-1.844 5.172-3.625 7.781-5.391 0.562-0.391 1.094-0.844 1.563-1.359zM28 6.5c0 1.75-1.297 3.328-2.672 4.281-2.438 1.687-4.891 3.375-7.313 5.078-1.016 0.703-2.734 2.141-4 2.141h-0.031c-1.266 0-2.984-1.437-4-2.141-2.422-1.703-4.875-3.391-7.297-5.078-1.109-0.75-2.688-2.516-2.688-3.938 0-1.531 0.828-2.844 2.5-2.844h23c1.359 0 2.5 1.125 2.5 2.5z"></path>
+                    </svg>
+                    felix@felixeve.co.uk
+                </a>
             </div>
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="28" viewBox="0 0 22 28">
@@ -92,20 +94,44 @@
 
         <div class="job row">
             <div class="job__meta row__title">
-                <h4 class="job__company">Contracting</h4>
+                <h4 class="job__company">FFW Agency</h4>
+                <div class="job__role">Drupal Developer</div>
+                <div class="job__dates">Oct 2021 - Dec 2021</div>
+            </div>
+            <div class="job__body">
+                <p>Updating a D8 multilingual multisite to D9.</p>
+            </div>
+        </div>
+
+        <div class="job row">
+            <div class="job__meta row__title">
+                <h4 class="job__company">Dennis Publishing</h4>
+                <div class="job__role">Drupal Developer</div>
+                <div class="job__dates">Aug 2021 - Oct 2021</div>
+            </div>
+            <div class="job__body">
+                <p>A short contract to help maintain the Drupal backend of all of the Dennis Publishing group websites.</p>
+                <p>Modules were shared over multiple sites from a private packagist repo.</p>
+                <p>Lots of Behat, Functional and Unit tests and config management.</p>
+            </div>
+        </div>
+
+        <div class="job row">
+            <div class="job__meta row__title">
+                <h4 class="job__company">Versantus</h4>
                 <div class="job__role">Drupal Developer</div>
                 <div class="job__dates">Feb 2021 - Aug 2021</div>
             </div>
             <div class="job__body">
                 <p>Initially a 3 month contract that was extended a further 6 months working for Versantus.</p>
                 <p>I was helping to build a system to manage charging electric cars, which at it's core was a Drupal 8 site. Complex system architecture with multiple APIs.</p>
-                <p>Was responsible for peer reviewing code, writing tests (Behat and Unit), production deployments and helping to improve the CI pipeline.</p>
+                <p>I was responsible for peer reviewing code, writing tests (Behat and Unit), production deployments and helping to improve the CI pipeline.</p>
             </div>
         </div>
 
         <div class="job row">
             <div class="job__meta row__title">
-                <h4 class="job__company">Contracting</h4>
+                <h4 class="job__company">Solverboard</h4>
                 <div class="job__role">Web Developer</div>
                 <div class="job__dates">Sep 2020 - Nov 2020</div>
             </div>
@@ -183,7 +209,7 @@
 
         <div class="row">
             <div class="row__title">Backend</div>
-            <div>PHP, MySQL, Drupal, Laravel, Wordpress, Solr, Elastic Search & Kibana</div>
+            <div>PHP, MySQL, Drupal, Laravel, Wordpress, Solr, Elastic Search</div>
         </div>
         <div class="row">
             <div class="row__title">Frontend</div>
@@ -199,7 +225,7 @@
         </div>
         <div class="row">
             <div class="row__title">Testing</div>
-            <div>Unit, Behat</div>
+            <div>Behat, Unit, Functional</div>
         </div>
 
     </section>
